k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexabank
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: production
